Fix the letter-spacing of the featurette's wording on the homepage

--- a/css/outer/home/features.less
+++ b/css/outer/home/features.less
@@ -10,7 +10,7 @@
     font-size: 1.5em;
     margin: 0;
     line-height: 27px;
-    letter-spacing: -1px;
+    letter-spacing: 1px;
   }
 
   & > section {
